Fix build warning after r177700 https://bugs.webkit.org/show_bug.cgi?id=139948

Patch by Hunseop Jeong <hs85.jeong@samsung.com> on 2014-12-25
Reviewed by Alexey Proskuryakov.

* UIProcess/WebConnectionToWebProcess.cpp:
(WebKit::WebConnectionToWebProcess::transformHandlesToObjects):
(WebKit::WebConnectionToWebProcess::transformObjectsToHandles):

Canonical link: https://commits.webkit.org/157901@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@177743 268f45cc-cd09-0410-ab3c-d52691b4dbfc